terraform/environments/dmz/subnets.tf
#Configuring DMZ Subnets

resource "aws_subnet" "dmz_subnet" {
    vpc_id = "${aws_vpc.dmz_vpc.id}"
    cidr_block = "${var.dmz_cidr}"

    tags {
        name = "dmz_subnet"
        terraform = "true"
    }
}
